PROGRAMMES-6717: Fix text size icon alignment (#800)
* This vertical align seems wrong everywhere it's used. Change it

* Add leading space in download button

--- a/src/Ds2013/Css/Core/Gel/Objects/_gelicon.scss
+++ b/src/Ds2013/Css/Core/Gel/Objects/_gelicon.scss
@@ -23,16 +23,6 @@ svg.gelicon {
     height: 100%;
 }
 
-svg.gelicon--alpha,
-svg.gelicon--beta,
-svg.gelicon--gamma,
-svg.gelicon--delta,
-svg.gelicon--centi,
-svg.gelicon--milli,
-svg.gelicon--micro {
-    vertical-align: text-top;
-}
-
 .gelicon--leading {
     margin-right: $basic-spacing;
 }
